Send email to list owner when new request is created

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=rallebola
 MYSQL_USER=rallebola
 MYSQL_PASSWORD=rallebola_password
+
+# SMTP (leave MAIL_HOST empty to disable email notifications)
+MAIL_HOST=
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=Rallebola
