--- a/api/composer.json
+++ b/api/composer.json
@@ -3,7 +3,8 @@
   "description": "Rallebola Inventory Management API",
   "require": {
     "php": ">=8.3",
-    "nikic/fast-route": "^1.3"
+    "nikic/fast-route": "^1.3",
+    "phpmailer/phpmailer": "^6.9"
   },
   "autoload": {
     "psr-4": {
